--- a/style.css
+++ b/style.css
@@ -4,16 +4,17 @@
     font-family: 'Roboto', sans-serif;
     box-sizing : border-box;
 }
-
+html{
+    scroll-behavior: smooth;
+}
 body{
-    background: whitesmoke;
+    background: ghostwhite;
     color: #151515;
 }
 #header{
     width: 100%;
     height: 100vh;
-    
-    background-image: url(images/background.png);
+    background-image: url(images/background.jpg);
     background-size: cover;
     background-position: center;
 
@@ -26,13 +27,11 @@ body{
 nav{
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-end;
     flex-wrap: wrap;
 }
 
-.logo{
-    width: 100px;
-}
+
 
 nav ul li{
     display: inline-block;
@@ -40,13 +39,16 @@ nav ul li{
     margin: 10px 20px;
 }
 
+/* Style for navigation*/
 nav ul li a{
-    color: #fff;
+    color: #000000;
+
     text-decoration:none;
     font-size: 16px;
     position: relative;
 }
-
+/*Bar that appears after hovering over menu
+starts at width 0, once hovered on, width is 100% (appears)*/
 nav ul li a::after{
     content:'';
     height: 3px;
@@ -60,12 +62,11 @@ nav ul li a::after{
 
 nav ul li a:hover::after{
     width:100%;
-
 }
 
 .header-text{
-    margin-top: 25%;
-    font-size: 20px;
+    margin-top: 20%;
+    font-size: 25px;
     color:#fff;
 }
 
@@ -75,5 +76,122 @@ nav ul li a:hover::after{
 }
 .header-text h1 span{
     font-size:50px;
+    font-weight: bold;
+}
+
+
+/*About me section */
+#about{
+    padding: 80px 0;
+    color: #3a4246;
+
+}
+
+.row{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.about-col-1{
+    flex-basis:35%;
+
+}
+
+.about-col-1 img{
+    width: 100%;
+    border-radius:15px;
     
+}
+
+/*Positioning of about me next to image */
+.about-col-2{
+    flex-basis: 50%
+}
+
+.sub-title{
+    font-size: 60px;
+    font-weight: 600;
+    color: #000000;
+
+}
+
+.tab-titles{
+    display: flex;
+    margin: 20px 0 40px;
+}
+
+.tab-links{
+    margin-right: 50px;
+    font-size: 18px;
+    font-weight:500;
+    cursor: pointer;
+    position: relative;
+}
+.tab-links::after{
+    content: '';
+    width:0;
+    height: 3px;
+    background: #2ebcf8;
+    position: absolute;
+    left: 0;
+    bottom: -8px;
+    transition: 0.3s;
+}
+
+
+.tab-links.active-link::after{
+    width:100%;
+
+}
+
+
+.tab-contents ul li{
+    list-style: none;
+    margin: 10px 0;
+
+}
+.tab-contents ul li span{
+    color: #0b92cd;
+    font-size: 20px;
+}
+
+
+.tab-contents{
+    display: none;
+}
+
+.tab-contents.active-tab{
+    display: block;
+}
+
+
+.tab-contents date{
+    color:#46c3b8;
+    font-size:13px;
+    font-weight: bold;
+}
+
+/* Projects Section*/
+#projects{
+    padding: 50px 0;
+}
+
+.work-list{
+    display:grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 40px;
+    margin-top: 50px;
+}
+.work{
+    border-radius: 10px;
+    position: relative;
+    overflow: hidden;
+
+}
+.work img{
+    width:100%;
+    border-radius: 10px;
+    display: block;
+
 }
