--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body{
     background-image: url(images/background.jpg);
     background-size: cover;
     background-position: center;
+    background-attachment: fixed;
 
 }
 
@@ -193,5 +194,103 @@ nav ul li a:hover::after{
     width:100%;
     border-radius: 10px;
     display: block;
+
+}
+
+
+/* --------------contact page ---------------*/
+.contact-left{
+    flex-basis: 35%;
+}
+
+.contact-right{
+    flex-basis: 60%;
+    
+    
+}
+.contact-left p{
+    margin-top:30px;
+
+}
+.contact-left p i{
+    color: #0077ff;
+    margin-right:15px;
+    font-size:25px;
+}
+.social-icons{
+    margin-top:30px;
+}
+.social-icons a{
+    text-decoration:none;
+    font-size:30px;
+    margin-right:15px;
+    color:#ababab;
+    display: inline-block;
+    transition: transform 0.5s;
+}
+.social-icons a:hover{
+    color: #ff004f;
+    transform: translateY(-5px);
+}
+.btn {
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
+}
+.btn.btn2{
+    display:inline-block;
+    background:#007bff;
+}
+.contact-right form{
+    width:100%;
+}
+form input, form textarea{
+    width: 100%;
+    border: 0;
+    outline: none;
+    background: #ffffff;
+    padding:15px;
+    margin:15px 0;
+    color: #000000;
+    border-radius: 6px;
+}
+form .btn2{
+    padding: 10px 50px;
+    font-size:18px;
+    margin-top:20px;
+    cursor:pointer;
+
+}
+
+.credits{
+    font-size:10px;
+
+    width: 100%;
+    text-align: center;
+    padding: 25px 0;
+    background: #ffffff;
+    font-weight: 300;
+    margin-top: 110px;
+
+}
+
+#msg{
+    color: #61b752;
+    margin-top: 10px;
+    display:block;
+}
+
+
+/*-------------Responsive Design--------------- */
+@media only screen and (max-width: 600px){
+    #header{
+        background-image: url(images/background.jpg);
+    }
+    .header-text{
+        margin-top: 10%;
+        font-size: 14px;
+    }
 
 }
